[package]
name = "test_utils_keypairs"
version = "0.2.0"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Test utils to make working with pre defined keypairs easier."

[dependencies]
solana-keypair = { workspace = true, default-features = true }

[lints]
workspace = true
